Make additional rules consistent + fix map layouts

--- a/draft-scenarios/coops/stand_united.tex
+++ b/draft-scenarios/coops/stand_united.tex
@@ -7,7 +7,7 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1332731339614453802/1332731339614453802}{Archon Studio Discord}
 
-\textit{Evil Dragon Lords threaten the entire Enroth. Heroes, with their armies united, march against them in an epic final stand.}
+\textit{Evil Dragon Lords threaten the entire Enroth. Heroes, with their armies united, march against them in an epic final stand.}  % no-check
 
 \subsection*{\MakeUppercase{Scenario Length}}
 
@@ -74,13 +74,13 @@ If at least one player has failed to defeat the Dragon Utopia by the end of Roun
 
 \begin{itemize}
   \item Remove both Azure Dragons Cards from the \svgunit{azure} Neutral Units Deck and set one of them aside for later use.
-  \item Players cannot recruit secondary Heroes.
-  \item Level VII Combat cannot be skipped by diplomacy or any other means.
-  \item Players can use their Build Token to initiate trade with one other chosen player. The two players can freely exchange resources and can exchange Artifacts or Spells from their hand as if their Heroes were adjacent.
-  \item During the game, players assemble a shared army. Every player can field Units from the shared army during combat (Shared Units' \svg{map} abilities can be activated each Round by only one player).
-  \item Upon flagging an Obelisk, discard the top Card from each neutral Units Deck except \svgunit{azure}. You can recruit one of these Units. Units recruited this way go into the shared army.
-  \item When fighting on Dragon Utopia, one of the Neutral \svgunit{azure} Units is always the Azure Dragon and the neutral army uses the AI Deck. Reshuffle the AI Deck and AI Spell Deck at the end of Combat.
-  \item After winning Combat at Dragon Utopia, no Faction Cube is placed on the Dragon Utopia Field. The victorious player puts one of their surviving Faction Units into the shared army and can redistribute their remaining resources among other players, after which that player gets removed from the game.
+  \item Players cannot recruit Secondary Heroes.
+  \item Level VII Combat cannot be skipped by Diplomacy or any other means.
+  \item Players can use their Build Token to initiate trade with one other chosen player. The two players can freely exchange Resources and can exchange Artifacts or Spells from their hand as if their Heroes were adjacent.
+  \item During the game, players assemble a shared army. Every player can field Units from the shared army during Combat (shared Units' \svg{map} abilities can be activated each Round by only one player).  % no-check
+  \item Upon flagging an Obelisk, discard the top Card from each Neutral Units Deck except \svgunit{azure}. You can recruit one of these Units. Units recruited this way go into the shared army.
+  \item During Combat at the Dragon Utopia, one of the Neutral \svgunit{azure} Units is always the Azure Dragon and the Neutral army uses the AI Deck. Reshuffle the AI Deck and AI Spell Deck at the end of Combat.
+  \item After winning Combat at the Dragon Utopia, no Faction Cube is placed on the Dragon Utopia Field. The victorious player puts one of their surviving Faction Units into the shared army and can redistribute their remaining Resources among other players, after which that player gets removed from the game.
 \end{itemize}
 
 \columnbreak
@@ -96,9 +96,10 @@ If at least one player has failed to defeat the Dragon Utopia by the end of Roun
 
 \begin{tikzpicture}[overlay]
   \centering
-  \node at (14.1, 0) {\includegraphics[scale=0.3]{\maps/stand_united_3p.png}};
-  \node at (14.1, -5) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
-  \node at (5, -5) {\includegraphics[scale=0.31]{\maps/stand_united_4p.png}};
+  \node at (14, 1) {\includegraphics[scale=0.3]{\maps/stand_united_3p.png}};
+  \node at (14, -4) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
+
+  \node at (5, -5) {\includegraphics[scale=0.3]{\maps/stand_united_4p.png}};
   \node at (5, -10) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
 \end{tikzpicture}
 
