deleted table for another clash, added and cleaned up additional rules section. Added spell and artifact svgs. reordered some rules.

--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -37,7 +37,7 @@ This Scenario plays out over 13 Rounds
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
-Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):
+Take the following Map Tiles ($P$ stands for the number of players) and arrange them as shown in the Scenario map layout:
 
 \begin{itemize}
   \item P × Starting (I) Map Tile
@@ -46,12 +46,13 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item P × Center (VI-VII) Map Tiles (C5 is treated as a Settlement)
 \end{itemize}
 
-\textbf{Additionally, for 2--3 players:}
+\textbf{Additionally,}\\
+\textbf{for 2--3 players:}
 \begin{itemize}
   \item 1 × Center (VI-VII) Map Tile with a Dragon Utopia
 \end{itemize}
 
-\textbf{For 4 players:}
+\textbf{for 4 players:}
 \begin{itemize}
   \item 2 × Center (VI-VII) Map Tiles with a Dragon Utopia
 \end{itemize}
@@ -61,8 +62,8 @@ The game ends at the end of the Round when any of these conditions are met:
 
 \begin{itemize}
  \item One player has defeated each other player's Main Heroes once - \textit{That player wins the game immediately.}
- \item One player has conquered both Dragon Utopias %- \textit{That player wins the game immediately.}
- \item At the end of Round 13 (or Round 9 for the shorter game).
+ \item One player has conquered both Dragon Utopias. %- \textit{That player wins the game immediately.}
+ \item At the end of Round 13 (or Round 9 for a short game).
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Points}}
@@ -71,7 +72,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 \begin{itemize}
  \item 5 VP for conquering a Dragon Utopia
  \item 2 VP for each enemy Main Town captured - \textit{once per captured Faction}
- \item 1 VP for every 5 Mines and Settlements on Near and Center Tiles
+ \item 1 VP for every flagged Mine and Settlement on Near and Center Tiles
  \item All removed Artifacts count towards VPs
 \end{itemize}
 
@@ -79,10 +80,10 @@ If no player has achieved an immediate victory, the player with the most Victory
 
 \begin{itemize}
   \item[\textbf{\nth{1}}] \textbf{Round:} All Heroes gain +1 \svgeven{movement}.
-  \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes. %Remove Black Cubes from all locations that give Resources, Morale or Cards (but not from the Grail).
+  \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes (except VII Settlement, Grail and Dragon Utopia.
   \item[\textbf{\nth{8}}] \textbf{Round:} Repeat event of Round 4.
   \item[\textbf{\nth{9}}] \textbf{Round:} Repeat event of Round 1.
-  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Heroes have the least experience roll 2 \svg{resource} dice.
+  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Main Hero have the least experience roll 2 \svg{resource} dice.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -92,25 +93,31 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item Split the Artifact and Spell Decks as depicted in the Tournament Book. %Create separate Decks for Minor, Major, and Relic Artifacts.
 %  \item Create separate Decks for Basic and Expert Spells.
 %  \item On Starting and Far Map Tiles, players can only acquire Basic Spells and Minor Artifacts. % To-do where to acquire expert spells?
+  \item When a secondary Hero is gained, that hero gains +1 \svg{movement} for that Round.
+  \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machine.
   \item Sanctuary effect: \textbf{once per Faction} gain a \svg{morale_positive} token and draw 1 Card.
-  \item Obelisk effect: \textbf{once per Faction} roll one \svg{resource} and draw one Card.
-  \item When fighting a Neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck.
-  \item Settlements on Center (VI-VII) Map Tiles are treated as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any XP).
-  \item When fighting a Neutral Combat, a Player may add +1 difficulty only for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck. % could be moved to a timed event; Round 5: All Neutral Combats are considered +(I) on Far and Near Map tiles "
+  \item Obelisk effect: \textbf{once per Faction} (per Obelisk) roll one \svg{resource} and draw one Card.
+  \item When fighting a Neutral Combat, a Player may increase the difficulty Level by +1 for an extra 5 \svg{gold} and Search (2) the Artifact or the Spell Deck.
   \item Level VII Neutral Combat cannot be skipped.
-  \item If your Hero is Level VII, treat Level VI neutrals as Level VII, then gain 10 \svg{gold} for winning a Level VII Combat. % "and gain" / "and then gain" May be removed.
-  \item If a player's Main Hero defeats another Main Hero, the defeated Player may change a Defense Statistic Card to an Empowered Defense Card. % or - Defeated Main Hero may Empower one Defense Statistic Card ("from his Deck of M&M")
+  \item If your Hero is Level VII, treat Level VI neutrals as Level VII, then gain 10 \svg{gold} for winning a Level VII Combat.
+  \item A defeated Main Hero may Empower one Defense Statistic card from his M\&M Deck and gain +1 \svg{movement} for the next Round.
+  %\item If a player's Main Hero is defeated, that Player may change a Defense Statistic Card to an Empowered Defense Card from his Deck.
+  \item Players do not have to pay \svg{gold} after losing a Combat against another Player.
+  \item When a Unit is attacked but suffers no \svg{damage-red}, it loses 1 \svg{defense}. That Unit regains all it's \svg{defense} after it suffers any \svg{damage-red}.
   \item Neutral Dragons can not be recruited in any way other than visiting a Dragon Utopia.
 
   \item Settlements on Center (VI-VII) Map Tiles count as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any \svg{experience}).
 
   \item Upon visiting a Grail Field, \textbf{choose one} and then put a Black Cube:
   \begin{itemize}
-    \item Receive: 10 \svg{gold}, 4 \svg{building_materials}, and 2 \svg{valuables}.
-    \item Roll 2 \svg{treasure} (reroll any \svg{experience}) and 2 \svg{resource}.
+    \item Receive: 10 \svg{gold}, 2 \svg{building_materials}, and 1 \svg{valuables}
+    \item Search (3) \svg{spellpower} twice 
+    \item Search (3) \svg{artifact} twice.
+    %\item Roll 2 \svg{resource} 2 \svg{treasure} and (reroll any \svg{experience}).
   \end{itemize}
 
-  \item When visiting a Dragon Utopia: Reshuffle the Neutral \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2 (+1 on impossible difficulty), AND draw from \svgunit{golden} until you get one Dragon.
+%  \item When visiting a Dragon Utopia: Reshuffle the Neutral \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2 (+1 on impossible difficulty), AND draw from \svgunit{golden} until you get one Dragon.
+  \item Dragon Utopias are guarded by 2 \svgunit{azure} dragons and 2 \svgunit{golden} dragons. 
   \item Upon flagging Dragon Utopia, \textbf{choose one} and then put a Black Cube:
   \begin{itemize}
     \item Recruit one of the defeated Dragons for half its \svg{gold} (rounded down) and its \svg{valuables} cost.
@@ -125,37 +132,8 @@ After visiting a Dragon Utopia, roll an Attack Die:
   \item[ \textbf{+1}] -- Scattered Treasure: All players may immediately spend \mbox{1 \svgeven{movement}} to Search (2) the Artifact Deck.
 \end{itemize}
 
-\hommtablemulticol[]{33}{
-  \centering
-  \medskip
-  \textbf{Battlefield Conditions}\\
-  \medskip
-
-  \begin{tabularx}{0.95\linewidth}{p{0.15\linewidth}XXXX}\\
-  \darkcell[1.4]{-1/-1}
-    & \lightcell[1.4]{Dense Fog – All Ranged units gain disadvantage.}\\
-  \darkcell[1.4]{-1/0}
-    & \lightcell[1.4]{Raining Ash – All \svg{unit_flying-table} Units gain -2 \svg{initiative-table}.}\\
-  \darkcell[1.4]{0/-1}
-    & \lightcell[1.4]{Sinking Mud – All \svg{unit_ground-table} Units move one space less.}\\
-  \darkcell[1.4]{-1/+1}
-    & \lightcell[1.4]{Scorching Earth – All \svgunit{silver} and \svgunit{golden} Units start with 1 \svg{damage-table}.}\\
-  \darkcell[1.4]{0/0}
-    & \lightcell[1.4]{Clear Skies – No effect.}\\
-  \darkcell[1.8]{+1/-1}
-    & \lightcell[1.8]{Fey Trickery – Players Activate their Units in ascending order of Unit Initiative.}\\
-  \darkcell[1.4]{0/+1}
-    & \lightcell[1.4]{Rocky Terrain – All Ground Units gain \svg{defense_yellow} Token.}\\
-  \darkcell[1.4]{+1/0}
-    & \lightcell[1.4]{Tail Wind – \svg{unit_flying-table} Units gain +1 Movement.}\\
-  \darkcell[1.4]{-1/-1}
-    & \lightcell[1.4]{Perfect Conditions – All \svg{unit_ranged-table} Units gain advantage.}\\
-  \end{tabularx}
-}
-
 \subsection*{\MakeUppercase{Suggested Houserules}}
 \begin{itemize}
-  \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machine.
   \item \href{https://boardgamegeek.com/thread/3445901/custom-hex-combat-board}{Compact Battlefield}.
   \item \href{https://boardgamegeek.com/thread/3449937/houserule-for-stacking-more-than-pack}{Stacking more than Pack} - Start with Several \svgunit{bronze} Units instead of Few.
 \end{itemize}
