fixed a couple capitalizations

--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -93,14 +93,14 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item Split the Artifact and Spell Decks as depicted in the Tournament Book. %Create separate Decks for Minor, Major, and Relic Artifacts.
 %  \item Create separate Decks for Basic and Expert Spells.
 %  \item On Starting and Far Map Tiles, players can only acquire Basic Spells and Minor Artifacts. % To-do where to acquire expert spells?
-  \item When a secondary Hero is gained, that hero gains +1 \svg{movement} for that Round.
+  \item When a secondary Hero is gained, that Hero gains +1 \svg{movement} for that Round.
   \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machine.
   \item Sanctuary effect: \textbf{once per Faction} gain a \svg{morale_positive} token and draw 1 Card.
   \item Obelisk effect: \textbf{once per Faction} (per Obelisk) roll one \svg{resource} and draw one Card.
   \item When fighting a Neutral Combat, a Player may increase the difficulty Level by +1 for an extra 5 \svg{gold} and Search (2) the Artifact or the Spell Deck.
   \item Level VII Neutral Combat cannot be skipped.
   \item If your Hero is Level VII, treat Level VI neutrals as Level VII, then gain 10 \svg{gold} for winning a Level VII Combat.
-  \item A defeated Main Hero may Empower one Defense Statistic card from his M\&M Deck and gain +1 \svg{movement} for the next Round.
+  \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svg{movement} for the next Round.
   %\item If a player's Main Hero is defeated, that Player may change a Defense Statistic Card to an Empowered Defense Card from his Deck.
   \item Players do not have to pay \svg{gold} after losing a Combat against another Player.
   \item When a Unit is attacked but suffers no \svg{damage-red}, it loses 1 \svg{defense}. That Unit regains all it's \svg{defense} after it suffers any \svg{damage-red}.
@@ -123,7 +123,6 @@ If no player has achieved an immediate victory, the player with the most Victory
     \item Recruit one of the defeated Dragons for half its \svg{gold} (rounded down) and its \svg{valuables} cost.
     \item Receive 15 \svg{gold} AND Search (3) any Artifact Deck.
   \end{itemize}
-%  \item A Dragon Utopia can only be flagged once. A flagged Dragon Utopia is considered to be an empty field to all Players. % or: "Once flagged, it is treated as an empty field to all players."
 \end{itemize}
 After visiting a Dragon Utopia, roll an Attack Die:
 \begin{itemize}
