--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -67,7 +67,9 @@ The game ends at the end of the Round when any of these conditions are met:
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Points}}
-If no player has achieved an immediate victory, the player with the most Victory Points (VP) wins. In addition to Tournament Book's 'Scoring Victory Points' -section, the Players get VPs for:
+If no player has achieved an immediate victory, the player with the most Victory Points (VP) wins.
+In addition to the Tournament Book's ``Scoring Victory Points'' section, players get VPs for:
+
 
 \begin{itemize}
  \item 5 VP for conquering a Dragon Utopia
