--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -85,7 +85,7 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
   \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes (except VII Settlement, Grail and Dragon Utopia.
   \item[\textbf{\nth{8}}] \textbf{Round:} Repeat event of Round 4.
   \item[\textbf{\nth{9}}] \textbf{Round:} Repeat event of Round 1.
-  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Main Hero have the least experience roll 2 \svg{resource} dice.
+  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Main Hero has the least experience roll 2 \svg{resource}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
