--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -82,7 +82,7 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
 
 \begin{itemize}
   \item[\textbf{\nth{1}}] \textbf{Round:} All Heroes gain +1 \svgeven{movement}.
-  \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes (except VII Settlement, Grail and Dragon Utopia.
+  \item[\textbf{\nth{4}}] \textbf{Round:} Remove all Black Cubes (except VII Settlement, Grail and Dragon Utopia).
   \item[\textbf{\nth{8}}] \textbf{Round:} Repeat event of Round 4.
   \item[\textbf{\nth{9}}] \textbf{Round:} Repeat event of Round 1.
   \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) whose Main Hero has the least experience roll 2 \svg{resource}.
