--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -95,9 +95,9 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
   \item Split the Artifact and Spell Decks as depicted in the Tournament Book. %Create separate Decks for Minor, Major, and Relic Artifacts.
 %  \item Create separate Decks for Basic and Expert Spells.
 %  \item On Starting and Far Map Tiles, players can only acquire Basic Spells and Minor Artifacts. % To-do where to acquire expert spells?
-  \item When a secondary Hero is gained, that Hero gains +1 \svg{movement} for that Round.
+  \item When a Secondary Hero is gained, that Hero gains +1 \svgeven{movement} for that Round.
   \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machine.
-  \item Sanctuary effect: \textbf{once per Faction} gain a \svg{morale_positive} token and draw 1 Card.
+  \item Sanctuary effect: \textbf{once per Faction}, gain a \svg{morale_positive} token and draw 1 Card.
   \item Obelisk effect: \textbf{once per Faction} (per Obelisk) roll one \svg{resource} and draw one Card.
   \item When fighting a Neutral Combat, a Player may increase the difficulty Level by +1 for an extra 5 \svg{gold} and Search (2) the Artifact or the Spell Deck.
   \item Level VII Neutral Combat cannot be skipped.
