--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -98,8 +98,8 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
   \item When a Secondary Hero is gained, that Hero gains +1 \svgeven{movement} for that Round.
   \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machine.
   \item Sanctuary effect: \textbf{once per Faction}, gain a \svg{morale_positive} token and draw 1 Card.
-  \item Obelisk effect: \textbf{once per Faction} (per Obelisk) roll one \svg{resource} and draw one Card.
-  \item When fighting a Neutral Combat, a Player may increase the difficulty Level by +1 for an extra 5 \svg{gold} and Search (2) the Artifact or the Spell Deck.
+  \item Obelisk effect: \textbf{once per Faction}, (per Obelisk) roll one \svg{resource} and draw one Card.
+  \item When fighting a Neutral Combat, players may increase the difficulty level by +1 for an extra 5 \svg{gold} and Search (2) the Artifact or the Spell Deck.  % no-check-caps
   \item Level VII Neutral Combat cannot be skipped.
   \item If your Hero is Level VII, treat Level VI neutrals as Level VII, then gain 10 \svg{gold} for winning a Level VII Combat.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svg{movement} for the next Round.
