--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -113,8 +113,7 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
   \begin{itemize}
     \item Receive: 10 \svg{gold}, 2 \svg{building_materials}, and 1 \svg{valuables}
     \item Search (3) \svg{spellpower} twice 
-    \item Search (3) \svg{artifact} twice.
-    %\item Roll 2 \svg{resource} 2 \svg{treasure} and (reroll any \svg{experience}).
+    \item Search (3) \svg{artifact} twice
   \end{itemize}
 
 %  \item When visiting a Dragon Utopia: Reshuffle the Neutral \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2 (+1 on impossible difficulty), AND draw from \svgunit{golden} until you get one Dragon.
