--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -5,15 +5,10 @@
 
 \textbf{Author:} LAAMAKALA
 
-%\textit{A valley where ancient dragons protect secrets long forgotten. Fight for power, claim the land, or perish like those before you.}
-
 \textit{A valley of secrets long forgotten. Its heart belongs to the beasts of old, while its fringes lure the bold and the desperate. Fight for power, claim the land, or perish like those before you.}
-
-% \textit{The valley calls to those who seek adventure and riches beyond imagination. Its heart is guarded by Dragons older than time, its edges lined with settlements of those who dare to claim a foothold in this perilous land. But there is no safety here—only the promise of power for those who fight, and the certainty of death for those who falter.}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario plays out over 13 Rounds
-%(or a shorter version over 9 Rounds).
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 -- 4
@@ -25,15 +20,12 @@ This Scenario plays out over 13 Rounds
 \textbf{Starting Units:}
 \begin{itemize}
   \item 2 × Few \svgunit{bronze} Units of the highest recruitment cost
-  %\item A Pack of \svgunit{bronze} Units of the lowest recruitment cost
-  %\item Pack of \svgunit{bronze} of second highest recruitment cost
-  %\item A Pack of \svgunit{bronze} Units of the player's choice
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
   \item \svgunit{bronze} Dwelling
-  \item Each player may build the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}. %"Before the start" - is included in "Player Setup - town buildings". Could be added "Before start each player may..."
+  \item Each player may build the \svg{building_special_tent} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
@@ -90,9 +82,7 @@ If no player has achieved an immediate victory, the player with the most Victory
 \begin{itemize}
   \item Remove ``View Earth'' from the Spell Deck.
   \item Remove ``Unexpected Reinforcements'' from the Astrologers Proclaim Deck.
-  \item Split the Artifact and Spell Decks as depicted in the Tournament Book. %Create separate Decks for Minor, Major, and Relic Artifacts.
-%  \item Create separate Decks for Basic and Expert Spells.
-%  \item On Starting and Far Map Tiles, players can only acquire Basic Spells and Minor Artifacts. % To-do where to acquire expert spells?
+  \item Split the Artifact and Spell Decks as depicted in the Tournament Book.
   \item When a secondary Hero is gained, that Hero gains +1 \svg{movement} for that Round.
   \item Trading Posts - on a single visit, trade Resources and remove Cards, OR buy a War Machine.
   \item Sanctuary effect: \textbf{once per Faction} gain a \svg{morale_positive} token and draw 1 Card.
@@ -101,7 +91,6 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item Level VII Neutral Combat cannot be skipped.
   \item If your Hero is Level VII, treat Level VI neutrals as Level VII, then gain 10 \svg{gold} for winning a Level VII Combat.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svg{movement} for the next Round.
-  %\item If a player's Main Hero is defeated, that Player may change a Defense Statistic Card to an Empowered Defense Card from his Deck.
   \item Players do not have to pay \svg{gold} after losing a Combat against another Player.
   \item When a Unit is attacked but suffers no \svg{damage-red}, it loses 1 \svg{defense}. That Unit regains all it's \svg{defense} after it suffers any \svg{damage-red}.
   \item Neutral Dragons can not be recruited in any way other than visiting a Dragon Utopia.
@@ -113,10 +102,8 @@ If no player has achieved an immediate victory, the player with the most Victory
     \item Receive: 10 \svg{gold}, 2 \svg{building_materials}, and 1 \svg{valuables}
     \item Search (3) \svg{spellpower} twice 
     \item Search (3) \svg{artifact} twice.
-    %\item Roll 2 \svg{resource} 2 \svg{treasure} and (reroll any \svg{experience}).
   \end{itemize}
-
-%  \item When visiting a Dragon Utopia: Reshuffle the Neutral \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2 (+1 on impossible difficulty), AND draw from \svgunit{golden} until you get one Dragon.
+  
   \item Dragon Utopias are guarded by 2 \svgunit{azure} dragons and 2 \svgunit{golden} dragons. 
   \item Upon flagging Dragon Utopia, \textbf{choose one} and then put a Black Cube:
   \begin{itemize}
@@ -143,17 +130,12 @@ After visiting a Dragon Utopia, roll an Attack Die:
 
 \begin{tikzpicture}[overlay]
   \centering
-  % 2-player
   \node at (4, -4) {\includegraphics[scale=0.165]{\maps/dragon-valley-2p.png}};
   \node at (4, -9) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
-  % 3-player
   \node at (13, -4) {\includegraphics[scale=0.165]{\maps/dragon-valley-3p.png}};
   \node at (13, -9) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
-  % 4-player
   \node at (4, -15) {\includegraphics[scale=0.165]{\maps/dragon-valley-4p.png}};
-  \node at (4, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
-  % 4-player short (This map layout is not yet balanced and ready, has to be tested out)
-  % 4-player short. -to be revised. Not tested.
+  \node at (4, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};.
   \node at (13, -15) {\includegraphics[scale=0.165]{\maps/dragon-valley-4p-short.png}};
   \node at (13, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER 9 ROUND SCENARIO}}}};
 \end{tikzpicture}
