Tikz + linter fixes

--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -110,7 +110,7 @@ After visiting a Dragon Utopia, roll an Attack Die:
 \begin{itemize}
   \item[\textbf{-1}] -- Dragons' Curse: The defeated Dragons’ spirits curse the land! All Heroes lose \mbox{1 \svgeven{movement}} for the next Round.
   \item[\textbf{0}] -- Dragons' Revenge: All players must sacrifice a Unit before the end of the Round; that Unit's health is reduced to 0.
-  \item[ \textbf{+1}] -- Scattered Treasure: All players may lose \mbox{1 \svgeven{movement}} from a Hero next round to Search (2) \svg{artifact} on the Map Tile that Hero is on.
+  \item[ \textbf{+1}] -- Scattered Treasure: All players may lose \mbox{1 \svgeven{movement}} from a Hero next Round to Search (2) \svg{artifact} on the Map Tile that Hero is on.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Suggested Houserules}}
@@ -129,8 +129,8 @@ After visiting a Dragon Utopia, roll an Attack Die:
   \node at (4, -9) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
   \node at (13, -4) {\includegraphics[scale=0.185]{\maps/dragon-valley-3p.png}};
   \node at (13, -9) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
-  \node at (4, -15) {\includegraphics[scale=0.175]{\maps/dragon-valley-4p.png}};
-  \node at (4, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};.
-  \node at (13, -15) {\includegraphics[scale=0.185]{\maps/dragon-valley-4p-short.png}};
-  \node at (13, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER 9 ROUND SCENARIO}}}};
+  \node at (4.5, -15) {\includegraphics[scale=0.175]{\maps/dragon-valley-4p.png}};
+  \node at (4.5, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};.
+  \node at (14, -15) {\includegraphics[scale=0.185]{\maps/dragon-valley-4p-short.png}};
+  \node at (14, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER 9 ROUND SCENARIO}}}};
 \end{tikzpicture}
