close-to-enemies change wording Version: 1.7

--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -5,7 +5,7 @@
 
 \textbf{Author:} Kelghor
 
-\textbf{Version:} 1.6
+\textbf{Version:} 1.7
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1313651865648369725}{Archon Studio Discord}
 
@@ -89,7 +89,7 @@ Prepare an AI Deck for Settlement defenders.
 \textbf{\nth{2} Round:}
 \begin{itemize}
   \item The first wave of Enemy Clan armies attacks all Towns (see section below).
-  \item Each player who successfully defended their Town may hire a Secondary Hero for 5 \svg{gold} during this Round. This still requires spending a Population Token.
+  \item After defending their Town, each player may may hire a Secondary Hero for 5 \svg{gold} during this Round. This still requires spending a Population Token.
 \end{itemize}
 \textbf{\nth{3} Round:}
 \begin{itemize}
@@ -98,12 +98,12 @@ Prepare an AI Deck for Settlement defenders.
 \textbf{\nth{4} Round:}
 \begin{itemize}
   \item The second wave of Enemy Clan armies attacks all Towns (see section below).
-  \item Each player who successfully defended their Town may Search (3) the \textit{Artifact Deck}.
+  \item After defending their Town, each player may Search (3) the \textit{Artifact Deck}.
 \end{itemize}
 \textbf{\nth{6} Round:}
 \begin{itemize}
   \item The third wave of Enemy Clan armies attacks all Towns (see section below).
-  \item Each player who successfully defended their Town may Search (3) the \textit{Artifact Deck}.
+  \item After defending their Town, each player may Search (3) the \textit{Artifact Deck}.
 \end{itemize}
 \textbf{\nth{7} Round:}
 \begin{itemize}
