--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -66,7 +66,7 @@ Prepare an AI Deck for Settlement defenders.
 
 \textbf{Settlement defenders Deck:} 1 × Attack Card, 1 × Defense Card, 1 × Spell Card
 
-\textbf{Settlement defenders Spell Deck:} 1 × Magic Arrow
+\textbf{Settlement defenders Spell Deck:} 1~×~Magic Arrow
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
@@ -89,7 +89,7 @@ Prepare an AI Deck for Settlement defenders.
 \textbf{\nth{2} Round:}
 \begin{itemize}
   \item The first wave of Enemy Clan armies attacks all Towns (see section below).
-  \item After defending their Town, each player may may hire a Secondary Hero for 5 \svg{gold} during this Round. This still requires spending a Population Token.
+  \item After defending their Town, each player may may hire a Secondary Hero for 5~\svg{gold} during this Round. This still requires spending a Population Token.
 \end{itemize}
 \textbf{\nth{3} Round:}
 \begin{itemize}
