--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Cooperative Scenario}{Close to enemies}{\images/ballistics.png}
+\addscenariosection{1}{Cooperative Scenario}{Close to Enemies}{\images/ballistics.png}
 
 \begin{multicols}{2}
 
@@ -48,13 +48,13 @@ Each pair of same-colored Cubes indicates a Starting (I) Map Tile and its corres
 \textbf{Map Tile Pool (choose one):}
 
 \begin{itemize}
-  \item \textbf{Personal Pool:} Each player takes remaining 1~×~Far (II--III) Map Tile without a Settlement of the same terrain as player's Town
+  \item \textbf{Personal Pool:} Each player takes remaining 1~×~Far (II--III) Map Tile without a Settlement that matches their Town's terrain
   \item \textbf{Shared Pool:}
   \begin{itemize}
     \item Remove all Far (II--III) Map Tiles without Settlements from the Map
-    \item Take collected Map Tiles from Map and remaining prepared Tiles and shuffle them together
-    \item Return Map Tiles to the Map in random order
-    \item Remaining Map Tiles creates Shared Pool
+    \item Take collected Map Tiles from the Map and remaining prepared Tiles and shuffle them together
+    \item Return the shuffled Map Tiles to the Map in random order
+    \item Remaining Map Tiles form the Shared Pool
   \end{itemize}
 \end{itemize}
 
@@ -105,7 +105,7 @@ Prepare an AI Deck for Settlement defenders.
 \end{itemize}
 \textbf{\nth{7} Round:}
 \begin{itemize}
-  \item During this Round, each player may perform the discard and draw action twice at the start of their turn, instead of the usual once.
+  \item During this Round, players may discard and draw twice at the start of their turn, instead of the usual once.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -128,6 +128,9 @@ Prepare an AI Deck for Settlement defenders.
   \item If your main Hero is in an allied Town (not Settlement) when a Clan attacks another allied Town without a main Hero present, you may help defend using your Might and Magic Cards. The allied Hero will use their Units, and you can help them by playing Cards from your hand during combat.
   \item Gain one \svg{experience} when successfully defending your Town, regardless of whether your main Hero participated.
 \end{itemize}
+
+\vspace*{\fill}
+\columnbreak
 
 \subsection*{\MakeUppercase{Settlements Defenders}}
 \begin{itemize}
