--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -90,7 +90,7 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
   \item If your Hero is Level VII, treat Level VI neutrals as Level VII, then gain 10 \svg{gold} for winning a Level VII Combat.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svgeven{movement} for the next Round.
   \item Players do not have to pay \svg{gold} after losing a Combat against another Player.
-  \item When a Unit is attacked but suffers no \svg{damage-red}, it gains a \href{https://archon-studio.com/files/manuals/homm/HoMM-Stronghold-Mission-Book-Beta_EN.pdf}{Corrotion} token. Remove it, when that Unit takes \svg{damage-red}.
+  \item When a Unit is attacked but suffers no \svg{damage-red}, it gains a \href{https://archon-studio.com/files/manuals/homm/HoMM-Stronghold-Mission-Book-Beta_EN.pdf}{Corrosion} token. Remove it, when that Unit takes \svg{damage-red}.
   \item Neutral Dragons cannot be recruited in any way other than visiting a Dragon Utopia.
   \item Settlements on Center (VI-VII) Map Tiles count as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any \svg{experience}).
   \item Upon visiting a Grail Field, \textbf{choose one} and then put a Black Cube:
