Move coop scenarios to the mission book

--- a/coops/main.tex
+++ b/coops/main.tex
@@ -11,3 +11,11 @@
 \clearpage
 
 \input{\coopspath/emerald_island.tex}
+
+\clearpage
+
+\input{coops/close_to_enemies.tex}
+
+\clearpage
+
+\input{coops/stand_united.tex}
