--- a/draft-scenarios/metadata.tex
+++ b/draft-scenarios/metadata.tex
@@ -495,12 +495,12 @@
 
 \clearpage
 
-\include{coops/main.tex}
+% \include{coops/main.tex}
 
-\include{clash/main.tex}
+% \include{clash/main.tex}
 
 \include{campaigns/main.tex}
 
-\include{sections/back_cover.tex}
+% \include{sections/back_cover.tex}
 
 \end{document}
