--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -194,7 +194,7 @@ During this Scenario:
     \item \textbf{Inferno Town contains a one-way Castle Gate} that will allow the Player to transport themselves to the Obelisk at N3. It worksy only if the N3 Obelisk was flagged.
 \end{itemize}
 
-\subsection*{\MakeUppercase{Special Battle\\Conditions}}
+\subsection*{\MakeUppercase{Special Combat\\Conditions}}
 
 \begin{itemize}
   \item \textbf{Pack of Medusas:} This Combat requires no additional \svgeven{movement}.
